[tool.poetry]
name = "http-proxy"
version = "0.1.0"
description = ""
authors = ["Hamza Kamal <samiak@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.44"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
